# fruit-manager

./: app.py  fruit_manager.py  notebook.ipynb  pyproject.toml  readme.md
