[project]
name = "fruit-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "fmazur57u",email = "florianmazur2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
